...
            Card(
                modifier = Modifier
                    .fillMaxWidth()
                    .weight(2f)
                    .padding(8.dp)
                    .border(BorderStroke(1.dp, Color.Black))
                    .testTag("Question Placeholder"),
                elevation = 8.dp
            ) {
                Column(
                    modifier = Modifier
                        .background(brush = brush)
                        .padding(16.dp),
...
            ) {
                for (i in 1..4) {
                    Surface(
                        modifier = Modifier
                            .fillMaxWidth()
                            .height(60.dp)
                            .testTag("Answer Placeholder"),
                        shape = RoundedCornerShape(20.dp),
                        border = BorderStroke(1.dp, Color.DarkGray),
                    ) {
                        Spacer(
                            modifier = Modifier
                                .fillMaxWidth()
...
